# interlab_py

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  Metrics.html  Project.html  README.md  Subobjects.html  _analysis_demo.html  analysis_demo.html  genindex.html  index.html  mAb_data_processing.html  mAb_outlier_detection_non-recursive.html  mAb_outlier_detection_non-recursive_single-pop.html  mAb_outlier_detection_recursive.html  nist_mab.html  noxfile.py  objects.inv  pyproject.toml  ruff.toml  search.html  searchindex.js
_modules/: index.html  metrics.html  project.html  utilities.html
_sources/: Project.rst.txt  Subobjects.rst.txt  _analysis_demo.rst.txt  analysis_demo.ipynb.txt  index.rst.txt  mAb_data_processing.ipynb.txt  mAb_outlier_detection_non-recursive.ipynb.txt  mAb_outlier_detection_recursive.ipynb.txt
_static/: leave_notice.js
config/: recipe-append.yaml
docs/: conf.py  installation.md
docs/examples/: example-usage.md  index.md  nist_mab.md
docs/examples/usage/: analysis_demo.ipynb  mAb_data_processing.ipynb  mAb_outlier_detection_non-recursive.ipynb  mAb_outlier_detection_non-recursive_single-pop.ipynb  mAb_outlier_detection_recursive.ipynb
docs/reference/: api-modules.rst  index.md
examples/usage/: analysis_demo.ipynb  demo.ipynb  mAb_data_processing.ipynb  mAb_outlier_detection_non-recursive.ipynb  mAb_outlier_detection_non-recursive_single-pop.ipynb  mAb_outlier_detection_recursive.ipynb  mab_utils.py
interlab/: __init__.py  metrics.py  plot_utils.py  project.py  utilities.py
requirements/: py310-test.yaml  py311-test.yaml  py312-dev.yaml  py312-test-extras.yaml  py312-test.yaml  py313-test.yaml  py38-test-extras.yaml  py38-test.yaml  py39-test.yaml
requirements/lock/: uvx-tools.txt
source/: Metrics.rst  Project.rst  Subobjects.rst  _analysis_demo.rst  analysis_demo.html  analysis_demo.ipynb  conf.py  index.md  index.rst  mAb_data_processing.ipynb  mAb_outlier_detection_non-recursive.ipynb  mAb_outlier_detection_non-recursive_single-pop.ipynb  mAb_outlier_detection_recursive.ipynb  mab_utils.py  nist_mab.rst  syn_data.xlsx
source/_static/: leave_notice.js
src/interlab/: __init__.py  metrics.py  plot_utils.py  project.py  utilities.py
src/interlab_py/: __init__.py  core.py
tests/: __init__.py  test_interlab.py  test_interlab_py.py
