[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-fancy-pypi-readme",
    "hatch-vcs",
    "hatchling",
]

[project]
name = "interlab-py"
description = "All the boilerplate you need to create a Python package."
keywords = [
    "interlab",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "David A. Sheen", email = "david.sheen@nist.gov" },
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dynamic = [
    "readme",
    "version",
]
dependencies = [
    "matplotlib",
    "numpy",
    "scikit-learn>=0.20",
    "scipy",
]
urls.Documentation = "https://pages.nist.gov/interlab_py/"
urls.Homepage = "https://github.com/usnistgov/interlab_py"

[dependency-groups]
dev = [
    { include-group = "dev-extras" },
    { include-group = "mypy" },
    { include-group = "nbval" },
    { include-group = "test" },
    { include-group = "typing" },
]
test = [
    { include-group = "pandas" },
    { include-group = "test-extras" },
]
docs = [
    "autodocsumm",
    "myst-nb; python_version>'3.9'",
    # myst-parser, ipython,
    "pyenchant",
    "sphinx>=5.3.0",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinxcontrib-spelling",
]
cog = [ "cogapp" ]
dev-extras = [
    "ipykernel",
    "ipython",
    "nbclient>=0.10.0",
    "nox>=2024.10.9",
    "pytest-accept",
    { include-group = "pandas" },
]
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
mypy = [ "mypy>=1.15.0" ]
nbval = [ "nbval" ]
pandas = [
    "openpyxl",
    "pandas",
]
test-extras = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "pytest-xdist",
]
test-notebook = [
    { include-group = "nbval" },
    { include-group = "pandas" },
    { include-group = "test-extras" },
]
typing = [
    "pylint",
    "pytest",
]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build]
exclude = [
    ".*_cache",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/interlab",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
    { path = "README.md" },
    { path = "CHANGELOG.md" },
    { path = "LICENSE" },
]

[tool.check-wheel-contents]
toplevel = [ "interlaby" ]
src_dir = [ "src" ]

[tool.pyproject-fmt]
# max_supported_python = "3.13"

# * Testing --------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=*.md",
    "--pyargs",
    "--cov-config=pyproject.toml",
]
testpaths = [
    "README.md",
    "interlab",
    "tests",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@overload",
]
omit = [
    "*/vendored/*",
    "*/_typing.py",
]
include = [
    "src/*",
]

[tool.coverage.paths]
source = [
    "src/",
    ".nox/**/site-packages/",
]

# * Typing ---------------------------------------------------------------------

[tool.mypy]
files = [
    "src",
    "tests",
]
show_error_codes = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    ".eggs",
    ".tox",
    ".nox",
    ".venv",
    ".numba_cache",
    "docs",
]
check_untyped_defs = true
strict = true

# [[tool.mypy.overrides]]
# ignore_missing_imports = true
# module = [  ]

# [[tool.mypy.overrides]]
# ignore_errors = true
# module = [  ]

[tool.pyright]
include = [
    "src",
    "tests",
]
exclude = [
    "**/__pycache__",
    ".tox/**",
    ".nox/**",
    ".venv/**",
    "**/.mypy_cache",
    "**/.numba_cache",
]
strict = [
    "src",
    "tests",
    "noxfile.py",
    "tools/*.py",
]
pythonVersion = "3.11"
typeCheckingMode = "strict"
# typeCheckingMode = "basic"
# # enable subset of "strict"
# reportDuplicateImport = true
# reportInvalidStubStatement = true
# reportOverlappingOverload = true
# reportPropertyTypeMismatch = true
# reportUntypedClassDecorator = true
# reportUntypedFunctionDecorator = true
# reportUntypedNamedTuple = true
# reportUnusedImport = true
# # disable subset of "basic"
# reportGeneralTypeIssues = false
# reportMissingModuleSource = false
# reportOptionalCall = false
# reportOptionalIterable = false
# reportOptionalMemberAccess = false
# reportOptionalOperand = false
# reportOptionalSubscript = false
# reportPrivateImportUsage = false
# reportUnboundVariable = false

[tool.pytype]
inputs = [
    "src",
    "tests",
]

# * Dependency creation --------------------------------------------------------

[tool.pyproject2conda]
user_config = "config/userconfig.toml"
template_python = "requirements/py{py}-{env}"
template = "requirements/{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }

[tool.pyproject2conda.envs.dev]
groups = "dev"

[tool.pyproject2conda.envs.test]
groups = "test"
python = "all"

[tool.pyproject2conda.envs.test-extras]
groups = "test-extras"
python = "all"
skip_package = true

[tool.pyproject2conda.envs.uvx-tools]
reqs = [
    # these used solely for specking tools to be used with uvx ...
    "conda-lock>=2.5.5",
    "grayskull>=2.5.3",
    "nbqa>=1.8.4",
    "pre-commit",
    "pre-commit-uv",
    "pyright>=1.1.396",
    "scriv",
    "twine>=5.0.0",
]
groups = "mypy"
skip_package = true
style = "requirements"

# * uv -------------------------------------------------------------------------

[tool.uv]
managed = true
default-groups = [ "dev" ]
fork-strategy = "requires-python"
required-version = ">=0.6.5"

[tool.uv.pip]
annotation-style = "line"

# * Other tools ----------------------------------------------------------------

[tool.scriv]
format = "md"
md_header_level = "2"
new_fragment_template = "file: changelog.d/templates/new_fragment.md.j2"

[tool.commitizen]
use_shortcuts = true

[tool.cruft]
